# nicheformer

./: LICENSE  README.md  pyproject.toml
data/: README.md
data/model_means/: cosmx_mean_script.npy  dissociated_mean_script.npy  iss_mean_script.npy  merfish_mean_script.npy  model.h5ad  xenium_mean_script.npy
data/spatialcorpus-110M/: README.md
data/spatialcorpus-110M/dissociated/Lu_2021/: download_Lu_2021.py  preprocess_Lu_2021.py
data/spatialcorpus-110M/spatial/examplary-Xenium/: README.md  download_xenium_lung.py  preprocess_xenium_lung.py
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
notebooks/: README.md
notebooks/experiments/: downstream_fine_tune.ipynb  get_embeddings.ipynb
notebooks/tokenization/: cosmx_human_lung.ipynb  scRNAseq_mouse_brain_haviv.ipynb  xenium_human_lung.ipynb
src/nicheformer/: __init__.py  _embeddings.py  _fine_tune.py  _train.py  fine_tune.py  get_embeddings.py  train.py
src/nicheformer/config_files/: _config_embeddings.py  _config_fine_tune.py  _config_train.py
src/nicheformer/data/: __init__.py  constants.py  datamodules.py  dataset.py  download.py  geo_data_extract.py  validate.py
src/nicheformer/data/tools/: __init__.py  basic_filtering.py  niche_compositions.py
src/nicheformer/experiments/: downstream_fine_tune.py  get_embeddings.py  pretraining_fine_tune.py
src/nicheformer/models/: __init__.py  _fine_tune_model.py  _nicheformer.py  _nicheformer_fine_tune.py  _utils.py
tests/: test_basic.py
